# data-federation-mesh

./: .dfm-cli.conf.yaml  .dockerignore  .gitignore  .hct-config.yaml  INSTALL.md  README.md  federations.yaml  pyproject.toml  pytest.ini
.github/: copy-pr-bot.yaml
.github/workflows/: build-ci-image.yml  ci.yml  main.yml  pr.yml  release.yml  resolve-ci-image.yml
ci/docker/: Dockerfile.ci  Dockerfile.gh.ci
ci/scripts/: common-python.sh  python-build-docs-gh.sh  python-build-wheels-gh.sh  python-run-format.sh  python-run-lint.sh  python-test-package.sh
docs/: conf.py  index.md  tutorials.md
docs/adapter_libraries/: common.md  index.md  weather.md
docs/modules/: api.rst  index.md  session.rst  targets.rst
docs/userguide/: index.md
docs/userguide/about/: installation.md  introduction.md  key_concepts.md
docs/userguide/cli/: completion.md  federation.md  index.md  poc.md
docs/userguide/development/: adapters.md  federation_configuration.md  site-customization.md  workflow.md
tests/: _builder_helpers.py  _operations_for_testing.py  _pipeline_compilation_test_base.py
tests/assets/golden/modgen/: test_simple_transition.py
tests/assets/inputs/apigen_testfiles/: ComputationParams1.partial.dfm.yaml  ComputationParams2.partial.dfm.yaml  canonicalize_sincle_objects_remote.yaml  testpkg.dfm.yaml
tests/assets/inputs/cli_testfiles/: basic_pipeline.py
tests/assets/inputs/openapigen/: ogcapi-environmental-data-retrieval-1-oas31.bundled.json
tests/assets/inputs/openapigen/tiny_spec/: main.yaml  user.yaml
tests/assets/testfed/: README.md
tests/assets/testfed/fed/api/: ops.py
tests/assets/testfed/lib/op_impls/: __init__.py  _binary_op_impl.py  _nullary_op_impl.py  _nullary_tuple_op_impl.py  (+2 more)
tests/helpers/: __init__.py  _generate_test_federation.py  _startup_kit_loader.py  _utils.py
tests/unit/nv_dfm_core/: test_init.py
tests/unit/nv_dfm_core/api/: test_bool_expressions.py  test_control_flow_statements.py  test_node_id.py  test_numpy_object.py  test_pipeline.py  test_pipeline_build_helper.py  test_python_object.py  test_unpicklable_objects.py  test_visitor_coverage.py
tests/unit/nv_dfm_core/cli/: conftest.py  test_completion_integration.py  test_main.py
tests/unit/nv_dfm_core/exec/: test_activation_functions.py  test_dfm_context.py  test_net_runner.py  test_places.py  test_router.py  test_secrets_vault_default.py  test_site.py  test_token_package.py
tests/unit/nv_dfm_core/session/: test_atexit_cleanup.py  test_callback_dispatcher.py  test_session.py
tests/unit/nv_dfm_core/telemetry/: __init__.py  test_collector.py  test_config.py  test_context.py  test_exporter.py  test_models.py
tests/unit/nv_dfm_lib_weather/cbottle/: test_cbottle_data_gen.py  test_cbottle_infilling.py  test_cbottle_super_resolution.py  test_cbottle_tc_guidance.py  test_cbottle_video.py
tests/unit/nv_dfm_lib_weather/sfno/: test_sfno_prognostic.py
tests/unit/nv_dfm_lib_weather/xarray/: test_variable_norm.py  test_xarray_cache.py  test_xarray_convert_to_uint8.py  test_xarray_render_image.py
tutorials/: README.md
tutorials/example-fed/: README.md  pyproject.toml
tutorials/example-fed/examplefed/apps/: concierge.py  submit.sh  submit_local.sh
tutorials/example-fed/examplefed/configs/: federation.dfm.yaml  project.yaml
tutorials/startup-fed/: README.md  cookiecutter.json
tutorials/startup-fed/{{cookiecutter.project_name}}/: .dfm-cli.conf.yaml  README.md  federations.yaml  pyproject.toml
tutorials/weather-fed/: 01-basic-pipeline.ipynb  02-weather-loaders-and-transforms.ipynb  README.md
tutorials/weather-fed/helpers/: find_repo_root.py  image_helper.py  imports.py  in_memory_http_server.py  make_run_panel.py  pipeline_helper.py
tutorials/weather-fed/weather_fed/: __init__.py
tutorials/weather-fed/weather_fed/configs/: federation.dfm.yaml  project.yaml
tutorials/zero-to-thirty/: 00-introduction.md  01-local-federation.md  02-flare-poc-mode.md  README.md
(+85 files in other folders)
